[tool.poetry]
name = "voipcord"
version = "1.0.0"
description = "Discord bot for VoIP telephony"
authors = ["samicrusader <hi@samicrusader.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-cord = {extras = ["voice"], version = "^2.5.0"}
pyVoIP = "^1.6.8"
pydantic = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
